src/test/deca/avecObjet/invalid/float_div_zero.ass
; start main program
; Beginning of main instructions:
	TSTO #5	; Main Program
	BOV pile_pleine
	ADDSP #4
; --------------------------------------------------
; Construction des tables des methodes
; --------------------------------------------------
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; --------------------------------------------------
; Code du programme principal
; --------------------------------------------------
	LOAD #0x1.91eb86p1, R3
	STORE R3, 3(GB)
	LOAD #0x0.0p0, R3
	STORE R3, 4(GB)
	LOAD 3(GB), R1
	PUSH R1
	LOAD 4(GB), R3
	POP R2
	CMP #0x0.0p0, R3
	BEQ division_par_zero_float
	DIV R3, R2
	BOV overflow_arith
	LOAD R2, R1
	WFLOAT
	HALT
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ Object.equals.true
	LOAD #0, R0
	BRA Object.equals.end
Object.equals.true:
	LOAD #1, R0
Object.equals.end:
	RTS
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
division_par_zero_float:
	WSTR "Erreur : division par 0.0"
	WNL
	ERROR
overflow_arith:
	WSTR "Erreur : overflow_arithmetique"
	WNL
	ERROR
; end main program
